# Tanktask

./: .gitignore  A3C.py  CMakeLists.txt  README.md  TankTrouble.sln  a.py  example.py  setup.py
TankTrouble/: TankTrouble.sln  TankTrouble.vcxproj  TankTrouble.vcxproj.filters  binder.cpp  draw.cpp  draw.h  game.cpp  game.h  init.cpp  init.h  input.cpp  input.h  main.cpp  structs.cpp  structs.h
Tankt/: __init__.py
include/: common.h  defs.h  init.h
python/: utils.py
src/: init.cpp  input.cpp  main.cpp  structs.cpp
